# S1_S2_rse_rushabh

./: .gitmodules  README.md
module_2/shl_1/: shl1_drivable.usd  shl_1.usd
module_2/shl_1/configuration/: shl_1_physics.usd  shl_1_robot.usd  shl_1_sensor.usd
ros2_ws/src/rse_shl1_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/rse_shl1_control/config/: controllers.yaml  swerve_controllers.yaml
ros2_ws/src/rse_shl1_control/launch/: swerve_control.launch.py
ros2_ws/src/rse_shl1_control/rse_shl1_control/: swerve_controller.py  test_robot_control.py
ros2_ws/src/rse_shl1_description/launch/: display.launch.py
ros2_ws/src/rse_shl1_description/urdf/: shl1_robot.urdf.xacro  shl1_robot_gazebo.urdf.xacro  shl1_robot_isaac.urdf.xacro
ros2_ws/src/rse_shl1_gazebo/: CMakeLists.txt  package.xml
ros2_ws/src/rse_shl1_gazebo/launch/: gazebo.launch.py  tp1.launch.py  tp2.launch.py
ros2_ws/src/rse_shl1_isaac/: CMakeLists.txt  package.xml
ros2_ws/src/rse_shl1_isaac/launch/: isaac.launch.py
ros2_ws/src/rse_shl1_swerve_controller/: CMakeLists.txt  package.xml  swerve_controller_plugin.xml
ros2_ws/src/rse_shl1_swerve_controller/config/: swerve_controller.yaml
ros2_ws/src/rse_shl1_swerve_controller/include/rse_shl1_swerve_controller/: swerve_controller.hpp
ros2_ws/src/rse_shl1_swerve_controller/src/: swerve_controller.cpp
